<resources>
    <string name="app_name">AlexaSample</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="address_title">Device Address</string>
    <string name="address_hint">Eg. https://10.0.2.2:8443</string>

    <string name="error">Error</string>
    <string name="connect">Connect</string>
    <string name="log_out">Log Out</string>

    <string name="success_msg">Your device is now successfully provisioned and ready to use.</string>
    <string name="login_button_descrip">Login with Amazon</string>
    <string name="saved_device_addr" translatable="false">saved_device_address</string>
</resources>
