<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/address_title"
        android:id="@+id/addressTitle"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_title_margin_start"
        android:layout_marginLeft="@dimen/activity_title_margin_start"
        android:layout_marginBottom="@dimen/activity_title_margin_bottom"
        android:textColor="@color/cardview_shadow_start_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addressTextView"
            android:layout_weight="1"
            android:hint="@string/address_hint"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:layout_gravity="center"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectProgressBar"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:gravity="center_vertical|center|center_horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressBar"
            android:layout_gravity="center"
            android:layout_centerInParent="true"/>
        <ImageButton
            android:id="@+id/loginButton"
            android:src="@mipmap/btnlwa_drkgry_login"
            android:background="@android:color/transparent"
            android:contentDescription="@string/login_button_descrip"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/loginMsg"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_marginTop="@dimen/logout_vertical_margin">
        <Button
            android:id="@+id/logoutbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>
